--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "scissor_math",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#ffdd56",
+    "theme_color": "#ffdd56",
     "description": "Tool to help with sewing math",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
