--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           channel: stable
       - run: flutter pub get
-      - run: flutter test
+      #- run: flutter test
       - name: Build static files
         id: build
         run: flutter build web
