--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       #- run: flutter test
       - name: Build static files
         id: build
-        run: flutter build web
+        run: flutter build web --base-href /scissor_math/
       - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
