--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   drift: ^2.24.0
   drift_flutter: ^0.2.4
   path_provider: ^2.1.5
+  provider: ^6.1.2
+  riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
