--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - run: flutter pub get
       #- run: flutter test
       - name: Codegen
-        run: flutter pub run build_runner build --delete-conflicting-files
+        run: dart run build_runner build --delete-conflicting-outputs
       - name: Build static files
         id: build
         run: flutter build web --base-href /scissor_math/
